--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="container">
                         <div class="navigation-inner">
                             <div class="logo">
-                                <a href="" class="logo-link"><img src="assets/img/logo.png" alt=""></a>
+                                <a href="" class="logo-link"><img src="assets/img/logo.svg" alt=""></a>
                             </div>
                             <div class="menu">
                                 <ul class="menu-ul mobile-menu">
@@ -855,23 +855,23 @@
                                 <div class="col-sm-6 col-md-6 col-lg-12">
                                     <div class="dealer-product mb-4">
                                         <img src="assets/img/banner/1.png" alt="" class="dealer-product-img">
-                                        <div class="dealer-contact">
+                                        <a href="" class="dealer-contact">
                                             <div class="dealer-contact-info">
                                                 <h4>Contact</h4>
-                                                <a href="" class="contact-btn">Learn More <img src="assets/img/icon/right.svg" alt=""></a>
+                                                <p class="contact-btn">Learn More <img src="assets/img/icon/right.svg" alt=""></p>
                                             </div>
-                                        </div>
+                                        </a>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 col-md-6 col-lg-12">
                                     <div class="dealer-product mb-4">
                                         <img src="assets/img/banner/2.png" alt="" class="dealer-product-img">
-                                        <div class="dealer-contact">
+                                        <a href="" class="dealer-contact">
                                             <div class="dealer-contact-info">
                                                 <h4>Contact</h4>
-                                                <a href="" class="contact-btn">Learn More <img src="assets/img/icon/right.svg" alt=""></a>
+                                                <p class="contact-btn">Learn More <img src="assets/img/icon/right.svg" alt=""></p>
                                             </div>
-                                        </div>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -904,23 +904,23 @@
                                 <div class="col-sm-6 col-md-6 col-lg-12">
                                     <div class="dealer-product mb-4">
                                         <img src="assets/img/banner/3.png" alt="" class="dealer-product-img">
-                                        <div class="dealer-contact">
+                                        <a href="" class="dealer-contact">
                                             <div class="dealer-contact-info">
                                                 <h4>Contact</h4>
-                                                <a href="" class="contact-btn">Learn More <img src="assets/img/icon/right.svg" alt=""></a>
+                                                <p class="contact-btn">Learn More <img src="assets/img/icon/right.svg" alt=""></p>
                                             </div>
-                                        </div>
+                                        </a>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 col-md-6 col-lg-12">
                                     <div class="dealer-product mb-4">
                                         <img src="assets/img/banner/4.png" alt="" class="dealer-product-img">
-                                        <div class="dealer-contact">
+                                        <a href="" class="dealer-contact">
                                             <div class="dealer-contact-info">
                                                 <h4>Contact</h4>
-                                                <a href="" class="contact-btn">Learn More <img src="assets/img/icon/right.svg" alt=""></a>
+                                                <p class="contact-btn">Learn More <img src="assets/img/icon/right.svg" alt=""></p>
                                             </div>
-                                        </div>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -1052,69 +1052,112 @@
                 <div class="container">
                     <div class="footer-content">
                         <div class="row">
-                            <div class="col-lg-8 mb-4">
+                            <div class="col-lg-8">
                                 <div class="row">
                                     <div class="col-md-4">
-                                        <div class="address-area">
-                                            <ul class="address-ul">
-                                                <li><img src="assets/img/icon/email.svg" alt="" class="address-icon">
-                                                    <p>info@hsvautos.nl</p>
-                                                </li>
-                                                <li><img src="assets/img/icon/phone.svg" alt="" class="address-icon">
-                                                    <p>+31 (0)578 61 77 88</p>
-                                                </li>
-                                                <li><img src="assets/img/icon/whats-app.svg" alt="" class="address-icon">
-                                                    <p>+31 (0) 622 37 69 69</p>
-                                                </li>
-                                                <li><img src="assets/img/icon/location.svg" alt="" class="address-icon">
-                                                    <p>Riezebosweg 4, 8171 MG Vaassen, The Netherlands</p>
-                                                </li>
-                                            </ul>
+                                        <div class="footer-toggle-btn">
+                                            <div class="shfooter">
+                                                <div class="d-md-none colleps-border  title" data-bs-target="#address" data-bs-toggle="collapse">
+                                                    <div class="mt-3 colleps-ind">
+                                                        <h2 class="colleps-button">why us</h2>
+                                                        <div class="float-right navbar-toggler">
+                                                            <i class="icofont-rounded-down"></i>
+                                                            <i class="icofont-rounded-up"></i>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="address-area collapse list-unstyled" id="address">
+                                                    <ul class="address-ul">
+                                                        <li><img src="assets/img/icon/email.svg" alt="" class="address-icon">
+                                                            <p>info@hsvautos.nl</p>
+                                                        </li>
+                                                        <li><img src="assets/img/icon/phone.svg" alt="" class="address-icon">
+                                                            <p>+31 (0)578 61 77 88</p>
+                                                        </li>
+                                                        <li><img src="assets/img/icon/whats-app.svg" alt="" class="address-icon">
+                                                            <p>+31 (0) 622 37 69 69</p>
+                                                        </li>
+                                                        <li><img src="assets/img/icon/location.svg" alt="" class="address-icon">
+                                                            <p>Riezebosweg 4, 8171 MG Vaassen, The Netherlands</p>
+                                                        </li>
+                                                    </ul>
+                                                </div>
+                                            </div>
                                         </div>
+
                                     </div>
                                     <div class="col-md-8">
-                                        <div class="footer-sec-titel">
-                                            <h4>Openingstijden</h4>
+                                        <div class="footer-toggle-btn">
+                                            <div class="shfooter">
+                                                <h5 class="my-2 d-none d-md-block">Openingstijden</h5>
+                                                <div class="d-md-none colleps-border  title" data-bs-target="#shedul" data-bs-toggle="collapse">
+                                                    <div class="mt-3 colleps-ind">
+                                                        <h2 class="colleps-button">Openingstijden</h2>
+                                                        <div class="float-right navbar-toggler">
+                                                            <i class="icofont-rounded-down"></i>
+                                                            <i class="icofont-rounded-up"></i>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="address-area collapse list-unstyled" id="shedul">
+                                                    <div class="table-responsive">
+                                                        <table class="table table-borderless">
+                                                            <tbody class="shedul-table">
+                                                                <tr>
+                                                                    <td>Maandag:</td>
+                                                                    <td>09.00 t/m 18.00</td>
+                                                                    <td>Vrijdag:</td>
+                                                                    <td>09.00 t/m 18.00</td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td>Dinsdag:</td>
+                                                                    <td>09.00 t/m 18.00</td>
+                                                                    <td>Zaterdag:</td>
+                                                                    <td>09.00 t/m 18.00</td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td>Woensdag:</td>
+                                                                    <td> 09.00 t/m 18.00</td>
+                                                                    <td>Zondag:</td>
+                                                                    <td>Op afspraak</td>
+                                                                </tr>
+                                                                <tr>
+                                                                    <td>Donderdag:</td>
+                                                                    <td>09.00 t/m 18.00</td>
+                                                                </tr>
+                                                            </tbody>
+                                                        </table>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </div>
-                                        <div class="table-responsive">
-                                            <table class="table table-borderless">
-                                                <tbody class="shedul-table">
-                                                    <tr>
-                                                        <td>Maandag:</td>
-                                                        <td>09.00 t/m 18.00</td>
-                                                        <td>Vrijdag:</td>
-                                                        <td>09.00 t/m 18.00</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>Dinsdag:</td>
-                                                        <td>09.00 t/m 18.00</td>
-                                                        <td>Zaterdag:</td>
-                                                        <td>09.00 t/m 18.00</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>Woensdag:</td>
-                                                        <td> 09.00 t/m 18.00</td>
-                                                        <td>Zondag:</td>
-                                                        <td>Op afspraak</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td>Donderdag:</td>
-                                                        <td>09.00 t/m 18.00</td>
-                                                    </tr>
-                                                </tbody>
-                                            </table>
-                                        </div>
+
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="col-lg-4 mb-4">
-                                <div class="footer-map">
-                                    <img src="assets/img/map.png" class="footer-map" alt="">
-                                </div>
-                                <div class="location">
-                                    <img src="assets/img/icon/location.svg" alt="" class="address-icon">
-                                    <p>Riezebosweg 4, 8171 MG Vaassen, The Netherlands</p>
+                            <div class="col-lg-4">
+                                <div class="footer-toggle-btn">
+                                    <div class="shfooter">
+                                        <div class="d-md-none colleps-border title" data-bs-target="#map" data-bs-toggle="collapse">
+                                            <div class="mt-3 colleps-ind">
+                                                <h2 class="colleps-button">Map</h2>
+                                                <div class="float-right navbar-toggler">
+                                                    <i class="icofont-rounded-down"></i>
+                                                    <i class="icofont-rounded-up"></i>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="address-area collapse list-unstyled" id="map">
+                                            <div class="footer-map">
+                                                <img src="assets/img/map.png" class="footer-map" alt="">
+                                            </div>
+                                            <div class="location">
+                                                <img src="assets/img/icon/location.svg" alt="" class="address-icon">
+                                                <p>Riezebosweg 4, 8171 MG Vaassen, The Netherlands</p>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
