--- a/occasion.html
+++ b/occasion.html
@@ -31,7 +31,7 @@
     <!-- ==========body wrapper=========== -->
     <div class="bory-wrapper bg-wrap">
         <!-- HEADER  -->
-        <header>
+        <header id="header">
             <!-- NAVIGATIN  -->
             <nav class="navigation">
                 <!-- TOP HEADER  -->
@@ -62,7 +62,7 @@
                                                 <img src="assets/img/icon/star.svg" alt="" class="rating">
                                                 <img src="assets/img/icon/star.svg" alt="" class="rating">
                                                 <img src="assets/img/icon/star.svg" alt="" class="rating">
-                                                <img src="assets/img/icon/star-alt.png" alt="" class="rating">
+                                                <img src="assets/img/icon/star-alt.svg" alt="" class="rating">
                                             </li>
                                             <p>3,7</p>
                                         </ul>
@@ -77,13 +77,13 @@
 
                                     <div class="language">
                                         <div class="language-flug">
-                                            <img src="assets/img/icon/country.png" alt="">
+                                            <img src="assets/img/icon/language.svg" alt="">
                                         </div>
                                         <select>
                                             <option value="1" selected>Select language</option>
-                                            <option value="2">Another option</option>
-                                            <option value="3">A disabled option</option>
-                                            <option value="4">Potato</option>
+                                            <option value="2">United State</option>
+                                            <option value="3">Bangladesh</option>
+                                            <option value="4">Pakistan</option>
                                           </select>
                                     </div>
                                 </div>
@@ -101,28 +101,60 @@
                             </div>
                             <div class="menu">
                                 <ul class="menu-ul mobile-menu">
-                                    <li>
-                                        <div class="menu-close"><i class="icofont-close"></i></div>
-                                    </li>
                                     <li><a href="index.html" class="nav-link active">Home</a></li>
-                                    <li><a href="" class="nav-link">Occassions</a></li>
-                                    <li><a href="" class="nav-link">Bestelauto's</a></li>
-                                    <li><a href="" class="nav-link">Inkoop</a></li>
-                                    <li><a href="" class="nav-link">Financiering</a></li>
-                                    <li><a href="" class="nav-link">Route</a></li>
-                                    <li><a href="" class="nav-link">Over ons</a></li>
-                                    <li><a href="" class="nav-link">Contact</a></li>
+                                    <li><a href="occasion.html" class="nav-link">Occassions</a></li>
+                                    <li><a href="single-car.html" class="nav-link">Bestelauto's</a></li>
+                                    <li><a href="purchase.html" class="nav-link">Inkoop</a></li>
+                                    <li><a href="financiering.html" class="nav-link">Financiering</a></li>
+                                    <li><a href="route.html" class="nav-link">Route</a></li>
+                                    <li><a href="about.html" class="nav-link">Over ons</a></li>
+                                    <li><a href="contact.html" class="nav-link">Contact</a></li>
                                 </ul>
                             </div>
 
-                            <!-- menu toggler -->
-                            <div class="hamburger-menu">
-                                <i class="icofont-navigation-menu"></i>
+                            <div class="humbarger-language">
+                                <div class="mobile-language">
+                                    <div class="language">
+                                        <div class="language-flug">
+                                            <img src="assets/img/icon/country.png" alt="">
+                                        </div>
+                                        <select>
+                                            <option value="1" selected>Select language</option>
+                                            <option value="2">Another option</option>
+                                            <option value="3">A disabled option</option>
+                                            <option value="4">Potato</option>
+                                          </select>
+                                    </div>
+                                </div>
+
+                                <!-- menu toggler -->
+                                <div class="hamburger-menu">
+                                    <div class="menu-btn__burger"></div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </nav>
+            <!-- NAVIGATIN END  -->
+            <!-- CALL TO ACTION  -->
+            <div class="footer__nav">
+                <ul class="menus">
+                    <li>
+                        <a href="#"><img src="assets/img/icon/icon-direct.svg" alt=""> <span>Cart</span></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="assets/img/icon/icon-familie.svg" alt=""> <span>Category</span></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="assets/img/icon/icon-mediation.svg" alt=""> <span>Home</span></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="assets/img/icon/icon-contact.svg" alt=""> <span>Wishlist</span></a>
+                    </li>
+                </ul>
+            </div>
+            <!-- CALL TO ACTION END  -->
         </header>
         <!-- HEADER END  -->
         <!-- PAGE BANNER -->
@@ -1083,7 +1115,9 @@
                                 </div>
                             </div>
                         </div>
-
+                        <!-- Add Pagination -->
+                        <div class="swiper-pagination"></div>
+                        <!-- pagination end  -->
                     </div>
                 </div>
                 <!-- SERVICE CARD  -->
@@ -1092,6 +1126,7 @@
         </div>
         <!-- ==================SERVICE END=================== -->
 
+
         <!-- ====================FOOTER AREA============ -->
         <footer>
             <div class="footer-area">
@@ -1099,18 +1134,18 @@
                     <div class="container">
                         <div class="navigation-inner">
                             <div class="logo">
-                                <a href="" class="logo-link"><img src="assets/img/logo.png" alt=""></a>
+                                <a href="" class="logo-link"><img src="assets/img/logo.svg" alt=""></a>
                             </div>
                             <div class="menu">
                                 <ul class="menu-ul">
                                     <li><a href="index.html" class="nav-link active">Home</a></li>
-                                    <li><a href="" class="nav-link">Occassions</a></li>
-                                    <li><a href="" class="nav-link">Bestelauto's</a></li>
-                                    <li><a href="" class="nav-link">Inkoop</a></li>
-                                    <li><a href="" class="nav-link">Financiering</a></li>
-                                    <li><a href="" class="nav-link">Route</a></li>
-                                    <li><a href="" class="nav-link">Over ons</a></li>
-                                    <li><a href="" class="nav-link">Contact</a></li>
+                                    <li><a href="occasion.html" class="nav-link">Occassions</a></li>
+                                    <li><a href="single-car.html" class="nav-link">Bestelauto's</a></li>
+                                    <li><a href="purchase.html" class="nav-link">Inkoop</a></li>
+                                    <li><a href="financiering.html" class="nav-link">Financiering</a></li>
+                                    <li><a href="route.html" class="nav-link">Route</a></li>
+                                    <li><a href="about.html" class="nav-link">Over ons</a></li>
+                                    <li><a href="contact.html" class="nav-link">Contact</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -1135,13 +1170,13 @@
                                                 </div>
                                                 <div class="address-area collapse list-unstyled" id="address">
                                                     <ul class="address-ul">
-                                                        <li><img src="assets/img/icon/email.svg" alt="" class="address-icon">
+                                                        <li><img src="assets/img/icon/f-mail.svg" alt="" class="address-icon">
                                                             <p>info@hsvautos.nl</p>
                                                         </li>
-                                                        <li><img src="assets/img/icon/phone.svg" alt="" class="address-icon">
+                                                        <li><img src="assets/img/icon/f-phone.svg" alt="" class="address-icon">
                                                             <p>+31 (0)578 61 77 88</p>
                                                         </li>
-                                                        <li><img src="assets/img/icon/whats-app.svg" alt="" class="address-icon">
+                                                        <li><img src="assets/img/icon/f-whats-app.svg" alt="" class="address-icon">
                                                             <p>+31 (0) 622 37 69 69</p>
                                                         </li>
                                                         <li><img src="assets/img/icon/location.svg" alt="" class="address-icon">
@@ -1251,9 +1286,10 @@
                                         </li>
                                     </ul>
                                 </div>
-                            </div>
-                            <div class="backto-top">
-                                <a href="#header" class="back-link">Terug naar boven <img src="assets/img/icon/top.svg" alt=""></a>
+
+                                <div class="backto-top">
+                                    <a href="#header" class="back-link">Terug naar boven <img src="assets/img/icon/top.svg" alt=""></a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -1261,6 +1297,7 @@
             </div>
         </footer>
         <!-- ====================FOOTER AREA END============ -->
+
     </div>
     <!-- ==========body wrapper end=========== -->
 
