--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
                                         </div>
                                         <select>
                                             <option value="1" selected>Select language</option>
-                                            <option value="2">Another option</option>
-                                            <option value="3">A disabled option</option>
-                                            <option value="4">Potato</option>
+                                            <option value="2">United State</option>
+                                            <option value="3">Bangladesh</option>
+                                            <option value="4">Pakistan</option>
                                           </select>
                                     </div>
                                 </div>
@@ -101,13 +101,13 @@
                             <div class="menu">
                                 <ul class="menu-ul mobile-menu">
                                     <li><a href="index.html" class="nav-link active">Home</a></li>
-                                    <li><a href="" class="nav-link">Occassions</a></li>
-                                    <li><a href="" class="nav-link">Bestelauto's</a></li>
-                                    <li><a href="" class="nav-link">Inkoop</a></li>
-                                    <li><a href="" class="nav-link">Financiering</a></li>
-                                    <li><a href="" class="nav-link">Route</a></li>
-                                    <li><a href="" class="nav-link">Over ons</a></li>
-                                    <li><a href="" class="nav-link">Contact</a></li>
+                                    <li><a href="occasion.html" class="nav-link">Occassions</a></li>
+                                    <li><a href="single-car.html" class="nav-link">Bestelauto's</a></li>
+                                    <li><a href="purchase.html" class="nav-link">Inkoop</a></li>
+                                    <li><a href="financiering.html" class="nav-link">Financiering</a></li>
+                                    <li><a href="route.html" class="nav-link">Route</a></li>
+                                    <li><a href="about.html" class="nav-link">Over ons</a></li>
+                                    <li><a href="contact.html" class="nav-link">Contact</a></li>
                                 </ul>
                             </div>
 
@@ -135,8 +135,26 @@
                     </div>
                 </div>
             </nav>
+            <!-- NAVIGATIN END  -->
+            <!-- CALL TO ACTION  -->
+            <div class="footer__nav">
+                <ul class="menus">
+                    <li>
+                        <a href="#"><img src="assets/img/icon/icon-direct.svg" alt=""> <span>Cart</span></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="assets/img/icon/icon-familie.svg" alt=""> <span>Category</span></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="assets/img/icon/icon-mediation.svg" alt=""> <span>Home</span></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="assets/img/icon/icon-contact.svg" alt=""> <span>Wishlist</span></a>
+                    </li>
+                </ul>
+            </div>
+            <!-- CALL TO ACTION END  -->
         </header>
-
         <!-- HEADER END  -->
         <!-- BANNER START  -->
         <div class="banner">
@@ -865,7 +883,7 @@
                     <div class="row">
                         <div class="col-lg-3">
                             <div class="row">
-                                <div class="col-sm-6 col-md-6 col-lg-12">
+                                <div class="col-sm-6 col-6 col-md-6 col-lg-12">
                                     <div class="dealer-product mb-4">
                                         <img src="assets/img/banner/1.png" alt="" class="dealer-product-img">
                                         <a href="" class="dealer-contact">
@@ -876,7 +894,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <div class="col-sm-6 col-md-6 col-lg-12">
+                                <div class="col-sm-6 col-6 col-md-6 col-lg-12">
                                     <div class="dealer-product mb-4">
                                         <img src="assets/img/banner/2.png" alt="" class="dealer-product-img">
                                         <a href="" class="dealer-contact">
@@ -888,9 +906,6 @@
                                     </div>
                                 </div>
                             </div>
-
-
-
                         </div>
 
                         <div class="col-lg-6 mb-4">
@@ -914,7 +929,7 @@
                         </div>
                         <div class="col-lg-3">
                             <div class="row">
-                                <div class="col-sm-6 col-md-6 col-lg-12">
+                                <div class="col-sm-6 col-6 col-md-6 col-lg-12">
                                     <div class="dealer-product mb-4">
                                         <img src="assets/img/banner/3.png" alt="" class="dealer-product-img">
                                         <a href="" class="dealer-contact">
@@ -925,7 +940,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <div class="col-sm-6 col-md-6 col-lg-12">
+                                <div class="col-sm-6 col-6 col-md-6 col-lg-12">
                                     <div class="dealer-product mb-4">
                                         <img src="assets/img/banner/4.png" alt="" class="dealer-product-img">
                                         <a href="" class="dealer-contact">
@@ -1029,7 +1044,9 @@
                                 </div>
                             </div>
                         </div>
-
+                        <!-- Add Pagination -->
+                        <div class="swiper-pagination"></div>
+                        <!-- pagination end  -->
                     </div>
                 </div>
                 <!-- SERVICE CARD  -->
@@ -1045,18 +1062,18 @@
                     <div class="container">
                         <div class="navigation-inner">
                             <div class="logo">
-                                <a href="" class="logo-link"><img src="assets/img/logo.png" alt=""></a>
+                                <a href="" class="logo-link"><img src="assets/img/logo.svg" alt=""></a>
                             </div>
                             <div class="menu">
                                 <ul class="menu-ul">
                                     <li><a href="index.html" class="nav-link active">Home</a></li>
-                                    <li><a href="" class="nav-link">Occassions</a></li>
-                                    <li><a href="" class="nav-link">Bestelauto's</a></li>
-                                    <li><a href="" class="nav-link">Inkoop</a></li>
-                                    <li><a href="" class="nav-link">Financiering</a></li>
-                                    <li><a href="" class="nav-link">Route</a></li>
-                                    <li><a href="" class="nav-link">Over ons</a></li>
-                                    <li><a href="" class="nav-link">Contact</a></li>
+                                    <li><a href="occasion.html" class="nav-link">Occassions</a></li>
+                                    <li><a href="single-car.html" class="nav-link">Bestelauto's</a></li>
+                                    <li><a href="purchase.html" class="nav-link">Inkoop</a></li>
+                                    <li><a href="financiering.html" class="nav-link">Financiering</a></li>
+                                    <li><a href="route.html" class="nav-link">Route</a></li>
+                                    <li><a href="about.html" class="nav-link">Over ons</a></li>
+                                    <li><a href="contact.html" class="nav-link">Contact</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -1081,13 +1098,13 @@
                                                 </div>
                                                 <div class="address-area collapse list-unstyled" id="address">
                                                     <ul class="address-ul">
-                                                        <li><img src="assets/img/icon/email.svg" alt="" class="address-icon">
+                                                        <li><img src="assets/img/icon/f-mail.svg" alt="" class="address-icon">
                                                             <p>info@hsvautos.nl</p>
                                                         </li>
-                                                        <li><img src="assets/img/icon/phone.svg" alt="" class="address-icon">
+                                                        <li><img src="assets/img/icon/f-phone.svg" alt="" class="address-icon">
                                                             <p>+31 (0)578 61 77 88</p>
                                                         </li>
-                                                        <li><img src="assets/img/icon/whats-app.svg" alt="" class="address-icon">
+                                                        <li><img src="assets/img/icon/f-whats-app.svg" alt="" class="address-icon">
                                                             <p>+31 (0) 622 37 69 69</p>
                                                         </li>
                                                         <li><img src="assets/img/icon/location.svg" alt="" class="address-icon">
@@ -1197,9 +1214,10 @@
                                         </li>
                                     </ul>
                                 </div>
-                            </div>
-                            <div class="backto-top">
-                                <a href="#header" class="back-link">Terug naar boven <img src="assets/img/icon/top.svg" alt=""></a>
+
+                                <div class="backto-top">
+                                    <a href="#header" class="back-link">Terug naar boven <img src="assets/img/icon/top.svg" alt=""></a>
+                                </div>
                             </div>
                         </div>
                     </div>
